push last change

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.16.6",
     "@sentry/nextjs": "^8.2.1",
     "@splinetool/react-spline": "^2.2.6",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.4",
+    "framer-motion": "^11.2.6",
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.1.4",
@@ -21,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-flex-pixel": "^1.0.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
